PCHR-1746: Remove hasSelected Model

--- a/contactaccessrights/views/access-rights-modal.html
+++ b/contactaccessrights/views/access-rights-modal.html
@@ -51,5 +51,5 @@
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-secondary-outline text-uppercase" data-dismiss="modal" ng-click="modalCtrl.cancel()">cancel</button>
-  <input type="button" value="save" class="btn btn-primary text-uppercase" ng-disabled="modalCtrl.submitting || !modalCtrl.hasSelected" ng-click="modalCtrl.submit()" ng-show="modalCtrl.dataLoaded" />
+  <input type="button" value="save" class="btn btn-primary text-uppercase" ng-disabled="modalCtrl.submitting" ng-click="modalCtrl.submit()" ng-show="modalCtrl.dataLoaded" />
 </div>
