PCHR-1881: Fix Effective date validation not done when contract revision is edited from Full History

--- a/hrjobcontract/views/modalChangeReason.html
+++ b/hrjobcontract/views/modalChangeReason.html
@@ -38,6 +38,6 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
-        <button type="submit" class="btn btn-primary" ng-click="save()" ng-disabled="!contractChangeReason.$valid">Save and done</button>
+        <button type="submit" class="btn btn-primary" ng-disabled="!contractChangeReason.$valid">Save and done</button>
     </div>
 </form>
