--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_results.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_results.scss
@@ -1,4 +1,5 @@
-.CRM_Contact_Form_Search_Advanced .crm-results-block {
+.CRM_Contact_Form_Search_Advanced .crm-results-block,
+.CRM_Contact_Form_Search_Basic .crm-results-block {
   @extend %block-with-shadow;
   margin-top: 20px;
 
