--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_contact.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_contact.scss
@@ -15,3 +15,4 @@
 @import 'pages/export-contact';
 @import 'pages/new-activity';
 @import 'pages/task-delete';
+@import 'pages/contact-preferences';
