PCHR-1353: Fix margins in dropdown menus

--- a/org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/style/_dropdowns.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/style/_dropdowns.scss
@@ -9,6 +9,12 @@
   margin: 0;
   padding: 0;
 
+  > li {
+    border: 0;
+    margin: 0;
+    padding: 0;
+  }
+
   > li > a {
     padding: $crm-dropdown-padding;
   }
