AI-4: Label padding issue

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
@@ -79,4 +79,10 @@
   .crm-form-block {
     padding: 15px;
   }
+
+  .crm-is-multi-activity-wrapper {
+    label {
+      padding: 15px 0;
+    }
+  }
 }
