AI-4: Fix review comments

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contact-preferences.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contact-preferences.scss
@@ -2,6 +2,13 @@
   .crm-contact-task-addtodonot-form-block {
     table.form-layout-compressed {
       margin: 0 25px;
+
+      label {
+        padding: 15px 0;
+      }
+      .crm-contact-task-addtodonot-form-block-pref label {
+        padding: 15px !important;
+      }
     }
   }
 }
