--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
@@ -83,6 +83,12 @@
   .crm-is-multi-activity-wrapper {
     label {
       padding: 15px 0;
+      position: relative;
+
+      &:after {
+        left:0 !important;
+        top: 17px !important;
+      }
     }
   }
 }
