AI-5: Change label color

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_accordions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_accordions.scss
@@ -74,6 +74,7 @@
         padding: 15px;
         font-weight: bold;
         text-align: left;
+        color: #4D5663;
 
         label {
           padding: 0;
