AI-5: Fix review comments

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_accordions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_accordions.scss
@@ -74,7 +74,7 @@
         padding: 15px;
         font-weight: bold;
         text-align: left;
-        color: #4D5663;
+        color: $gray-darker;
 
         label {
           padding: 0;
