--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-email.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-email.scss
@@ -66,7 +66,7 @@
           &.label {
             padding: 30px;
             font-weight: bold;
-            color: #4D5663;
+            color: $gray-darker;
           }
         }
 
