AI-5: Change label weight

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-email.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-email.scss
@@ -65,7 +65,7 @@
         td {
           &.label {
             padding: 30px;
-            font-weight: bold;
+            font-weight: 600;
             color: $gray-darker;
           }
         }
