--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
@@ -21,6 +21,7 @@
 label {
   font-weight: normal !important;
   position: relative;
+  padding: 0 !important;
 }
 
 input[type='checkbox'] + label {
