AI-2: Fix email builder style

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/search/pages/_search.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/search/pages/_search.scss
@@ -1,4 +1,8 @@
 .CRM_Contact_Form_Search_Basic {
+  label {
+    padding: 0 !important;
+  }
+
   .crm-basic-criteria-form-block {
     padding: 0 !important;
 
