AI-2: Adjust field icon alignment

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
@@ -80,6 +80,11 @@
     padding: 15px;
   }
 
+  .crm-option-edit-link {
+    position: relative;
+    top: -8px;
+  }
+
   .crm-is-multi-activity-wrapper {
     label {
       padding: 15px 0;
