contactsummary.css - Fix generation via gulp
There were multiple problems generating this file:

 * The gulpfile refers to folder `scss/`, but the code in `sass/`. The `scss/` seems more normal among the various extensions.
 * The `contactsummary.scss` referred to a non-existent file.

The ouptutted content in `css/contactsummary.css` appears to be the same,
modulo comments and compression.

--- a/contactsummary/css/contactsummary.css
+++ b/contactsummary/css/contactsummary.css
@@ -1,23 +1,1 @@
-/* line 8, ../sass/contactsummary.scss */
-#contactsummary {
-  padding: 20px;
-}
-/* line 13, ../sass/contactsummary.scss */
-#contactsummary .panel--key-dates > .panel-body {
-  padding-bottom: 0;
-  padding-top: 0;
-}
-/* line 19, ../sass/contactsummary.scss */
-#contactsummary .panel--key-details {
-  margin-bottom: 0 !important;
-}
-/* line 24, ../sass/contactsummary.scss */
-#contactsummary .panel--leave .list-unstyled {
-  margin-bottom: 0;
-}
-@media (min-width: 1200px) {
-  /* line 32, ../sass/contactsummary.scss */
-  #contactsummary .panel--sickness .col--sickness-days {
-    text-align: right;
-  }
-}
+#contactsummary{padding:20px}#contactsummary .panel--key-dates>.panel-body{padding-bottom:0;padding-top:0}#contactsummary .panel--key-details{margin-bottom:0 !important}#contactsummary .panel--leave .list-unstyled{margin-bottom:0}@media (min-width: 1200px){#contactsummary .panel--sickness .col--sickness-days{text-align:right}}
