AI-12: Styling new individual page

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_buttons.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_buttons.scss
@@ -123,7 +123,7 @@ $button-border-radius: 2px;
   .crm-clear-link {
     border: 0 !important;
     color: $gray-dark;
-    margin: 0;
+    margin: 7px 0px !important;
   }
 
   .crm-accordion-header,
