--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_accordions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_accordions.scss
@@ -83,6 +83,11 @@
 
       label {
         padding: 15px;
+        position: relative;
+
+        &:after {
+          top: 21px !important;
+        }
       }
     }
   }
