--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-individual.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-individual.scss
@@ -9,6 +9,10 @@
                 &:last-child {
                   min-width: 150px;
                 }
+
+                &:first-child {
+                  min-width: 170px;
+                }
               }
             }
 
@@ -82,6 +86,153 @@
     .select2-choice {
       > .select2-chosen {
         font-size: 13px;
+      }
+    }
+  }
+
+  .crm-accordion-body {
+    td {
+      label {
+        padding-left: 0 !important;
+      }
+
+      #s2id_employer_id {
+        width: 100% !important;
+      }
+
+      #s2id_preferred_language,
+      #s2id_preferred_mail_format {
+        float: left;
+      }
+    }
+  }
+  .contact_information-section {
+    width: 100% !important;
+    tr {
+      &:nth-child(1) {
+        td {
+          &:nth-child(2),
+          &:nth-child(3) {
+            position: relative;
+            top: 35px;
+
+            .helpicon {
+              position: relative;
+              z-index: 2;
+              left: 40px;
+            }
+          }
+
+          &:nth-child(2) {
+            .helpicon {
+              left: 60px;
+            }
+          }
+        }
+      }
+
+      &:nth-child(2) {
+        td {
+          &:nth-child(2),
+          &:nth-child(3) {
+            position: relative;
+            z-index: 1;
+          }
+
+          &:nth-child(2) {
+            right: 60px;
+          }
+
+          &:nth-child(3) {
+            right: 30px;
+          }
+        }
+      }
+    }
+  }
+
+  #commPrefs {
+    table {
+      td {
+        max-width: 270px;
+
+        select {
+          max-width: 100%;
+          padding-right: 30px !important;
+        }
+      }
+    }
+  }
+
+  #demographics {
+    .labels {
+      padding: 15px 0;
+
+      label {
+        float: left;
+      }
+    }
+  }
+
+  #customData1 {
+    .help {
+      padding: 15px 0;
+    }
+    table {
+      td {
+        padding-left: 0;
+      }
+    }
+  }
+
+  #tagtree {
+    li {
+      padding: 10px 0;
+
+      input[type=checkbox] {
+
+        &:checked + spab {
+          label[for]::before {
+            margin-right: 5px;
+            vertical-align: middle;
+          }
+        }
+
+        + span {
+          label[for]::before {
+            content: '';
+            display: inline-block;
+            width: 16px;
+            min-width: 16px;
+            height: 16px;
+            border-radius: 2px;
+            margin-right: 10px;
+            margin-bottom: -5px;
+            background-color: #ffffff;
+            box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2);
+            border: solid 1px $crm-darker-grayblue;
+          }
+        }
+
+        &:checked + spab {
+          label[for] {
+            position: relative;
+          }
+        }
+        &:checked + span {
+          label[for]::after {
+            @include fa-icon($font-size: 15px, $content: '\f00c', $color: $gray-darker);
+            display: inline-block;
+            position: absolute;
+            left: 5px;
+            top: 4px;
+            margin-top: -5px;
+          }
+        }
+      }
+
+      .form-checkbox {
+        display: none !important;
       }
     }
   }
