AI-4: Contact remove tag

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_tag-contacts.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_tag-contacts.scss
@@ -1,4 +1,5 @@
-.CRM_Contact_Form_Task_AddToTag {
+.CRM_Contact_Form_Task_AddToTag,
+.CRM_Contact_Form_Task_RemoveFromTag {
 
   h3 {
     padding-top: 20px;
