AI-5: Label bold issue

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_accordions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_accordions.scss
@@ -72,7 +72,7 @@
     td {
       &.label {
         padding: 15px;
-        font-weight: bold;
+        font-weight: 600;
         text-align: left;
         color: $gray-darker;
 
