AI-6: Warning Messages 2 seconds visability issue

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_notifications.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_notifications.scss
@@ -59,3 +59,14 @@
     padding: 15px;
   }
 }
+
+#crm-main-content-wrapper {
+  form {
+    .messages {
+      &.crm-error {
+        position: absolute;
+        visibility: hidden;
+      }
+    }
+  }
+}
