PCHR-1804: Fix issues with not displaying only active locations, departments, region and lavel

--- a/com.civicrm.hrjobroles/views/include/add_new_role.html
+++ b/com.civicrm.hrjobroles/views/include/add_new_role.html
@@ -82,31 +82,30 @@
                                                 </p>
                                               </div>
                                             </div>
-
                                         </div>
                                         <div class="col-xs-12 col-sm-6">
                                             <div class="form-group">
                                                 <label for="newLocation" class="col-xs-4 control-label">Location:</label>
                                                 <div class="col-xs-6 control-label">
-                                                    <select ng-options="k as v.title for (k, v) in jobroles.LocationsData" ng-model="edit_data['new_role_id']['location']" class="form-control"></select>
+                                                    <select ng-options="k as v.title for (k, v) in jobroles.LocationsData | getActiveGroup:'1'" ng-model="edit_data['new_role_id']['location']" class="form-control"></select>
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <label for="newRegion" class="col-xs-4 control-label">Region:</label>
                                                 <div class="col-xs-6 control-label">
-                                                    <select ng-options="k as v.title for (k, v) in jobroles.RegionsData" ng-model="edit_data['new_role_id']['region']" class="form-control"></select>
+                                                    <select ng-options="k as v.title for (k, v) in jobroles.RegionsData | getActiveGroup:'1'" ng-model="edit_data['new_role_id']['region']" class="form-control"></select>
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <label for="newDepartment" class="col-xs-4 control-label">Department:</label>
                                                 <div class="col-xs-6 control-label">
-                                                    <select ng-options="k as v.title for (k, v) in jobroles.DepartmentsData" ng-model="edit_data['new_role_id']['department']" class="form-control"></select>
+                                                    <select ng-options="k as v.title for (k, v) in jobroles.DepartmentsData | getActiveGroup:'1'" ng-model="edit_data['new_role_id']['department']" class="form-control"></select>
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <label for="newLevel" class="col-xs-4 control-label">Level:</label>
                                                 <div class="col-xs-6 control-label">
-                                                    <select ng-options="k as v.title for (k, v) in jobroles.LevelsData" ng-model="edit_data['new_role_id']['level']" class="form-control"></select>
+                                                    <select ng-options="k as v.title for (k, v) in jobroles.LevelsData | getActiveGroup:'1'" ng-model="edit_data['new_role_id']['level']" class="form-control"></select>
                                                 </div>
                                             </div>
 
