--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
@@ -196,6 +196,16 @@ input[type='checkbox'] + label {
       }
     }
   }
+
+  .select2-container {
+    width: 230px !important;
+  }
+
+  @media (max-width: $screen-sm-min) {
+    .select2-container {
+      width: 100% !important;
+    }
+  }
 }
 
 #{$display-settings-for-results} {
