PCHR-1302: PR review updates, Add check to restrict to date

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -57,7 +57,7 @@
                     </div>
                   </div>
                   <div class="col-xs-4">
-                    <crm-loading show="!$ctrl.loading.fromDayTypes">
+                    <crm-loading show="!$ctrl.loading.fromDayTypes" class="chr_leave-request-modal__small_spinner">
                       <div class="chr_custom-select chr_custom-select--full">
                         <select
                           name="fromDayTypeSelect"
@@ -99,7 +99,7 @@
                     </div>
                   </div>
                   <div class="col-xs-4">
-                    <crm-loading show="!$ctrl.loading.toDayTypes">
+                    <crm-loading show="!$ctrl.loading.toDayTypes" class="chr_leave-request-modal__small_spinner">
                       <div class="chr_custom-select chr_custom-select--full">
                         <select
                           name="toDayTypeSelect"
