--- a/contactaccessrights/views/access-rights-modal.html
+++ b/contactaccessrights/views/access-rights-modal.html
@@ -27,7 +27,7 @@
             <ui-select multiple on-select="modalCtrl.selection($item, $model)" ng-required="true" theme="civihr-ui-select" ng-model="modalCtrl.selectedData.regions">
               <ui-select-match placeholder="- select -">{{$item.label}}</ui-select-match>
               <ui-select-choices repeat="region.id as region in modalCtrl.availableData.regions | filter: $select.search">
-                <div ng-bind-html="region.name | highlight: $select.search"></div>
+                <div ng-bind-html="region.label | highlight: $select.search"></div>
               </ui-select-choices>
             </ui-select>
           </div>
@@ -40,7 +40,7 @@
             <ui-select multiple on-select="modalCtrl.selection($item, $model)" ng-required="true" theme="civihr-ui-select" ng-model="modalCtrl.selectedData.locations">
               <ui-select-match placeholder="- select -">{{$item.label}}</ui-select-match>
               <ui-select-choices repeat="location.id as location in modalCtrl.availableData.locations | filter: $select.search">
-                <div ng-bind-html="location.name | highlight: $select.search"></div>
+                <div ng-bind-html="location.label | highlight: $select.search"></div>
               </ui-select-choices>
             </ui-select>
           </div>
