AI-17: Adjust contribution tab

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
@@ -58,6 +58,10 @@
     float: none !important;
     padding: 0 !important;
   }
+
+  .crm-expand-row {
+    line-height: 16px;
+  }
 }
 
 // Edit label
