--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -50,7 +50,7 @@
                         datepicker-options="$ctrl.uiOptions.date.from.options"
                         ng-model="$ctrl.uiOptions.fromDate"
                         is-open="$ctrl.uiOptions.date.from.show"
-                        ng-change="$ctrl.onDateChange($ctrl.uiOptions.fromDate, 'from')"/>
+                        ng-change="$ctrl.updateAbsencePeriodDatesTypes($ctrl.uiOptions.fromDate, 'from')"/>
                       <span class="input-group-btn">
                         <button type="button" class="btn btn-default fa fa-calendar" ng-click="$ctrl.uiOptions.date.from.show = true"></button>
                       </span>
@@ -90,7 +90,7 @@
                         ng-model="$ctrl.uiOptions.toDate"
                         is-open="$ctrl.uiOptions.date.to.show"
                         ng-readonly="!$ctrl.leaveRequest.from_date"
-                        ng-change="$ctrl.onDateChange($ctrl.uiOptions.toDate, 'to')"/>
+                        ng-change="$ctrl.updateAbsencePeriodDatesTypes($ctrl.uiOptions.toDate, 'to')"/>
                       <span class="input-group-btn">
                         <button type="button" class="btn btn-default fa fa-calendar"
                           ng-click="$ctrl.uiOptions.date.to.show = $ctrl.leaveRequest.from_date ? true : false">
