AI-17: Add a border-top

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
@@ -80,6 +80,10 @@
             padding-left: 20px;
           }
         }
+
+        &:last-child {
+          border-top: 1px solid $crm-dark-grayblue;
+        }
       }
     }
 
