--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
@@ -96,4 +96,15 @@
       }
     }
   }
+
+  .required {
+    &:after {
+      display: none;
+    }
+  }
+
+  table.form-layout td > .select2-container {
+    margin-top: 0 !important;
+    margin-bottom: 20px !important;
+  }
 }
