AI-31: Page title padding

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contact-preferences.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contact-preferences.scss
@@ -1,5 +1,10 @@
 .CRM_Contact_Form_Task_AlterPreferences {
   .crm-contact-task-addtodonot-form-block {
+    h3 {
+      padding-left: 23px;
+      padding-top: 20px;
+    }
+
     table.form-layout-compressed {
       margin: 0 25px;
 
