AI-31: Style listing-box

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contact-preferences.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contact-preferences.scss
@@ -27,6 +27,14 @@
           top: 17px;
         }
       }
+
+      .listing-box {
+        height: 216px;
+
+        > div {
+          background-color: #ffffff;
+        }
+      }
     }
   }
 }
