AI-31: Adjust listing-box height

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contact-preferences.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contact-preferences.scss
@@ -29,7 +29,8 @@
       }
 
       .listing-box {
-        height: 216px;
+        max-height: 216px;
+        height: auto;
 
         > div {
           background-color: #ffffff;
